--- a/Thursday_Blank_Thieves.ipynb
+++ b/Thursday_Blank_Thieves.ipynb
@@ -673,10 +673,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "THIEVES 126\n"
+     ]
+    }
+   ],
+   "source": [
+    "class String:\n",
+    "    def __init__(self):\n",
+    "        self.input_string = \"\"\n",
+    "\n",
+    "    def get_string(self):\n",
+    "        self.input_string = input(\"Enter a string: \")\n",
+    "\n",
+    "    def print_string(self):\n",
+    "        print(self.input_string.upper())\n",
+    "\n",
+    "# Example usage:\n",
+    "processor = String()\n",
+    "processor.get_string()\n",
+    "processor.print_string()\n"
+   ]
   }
  ],
  "metadata": {
